--- a/client/views/roastList.html
+++ b/client/views/roastList.html
@@ -8,6 +8,10 @@
 		            		Latest Roasts
 		            	</div>
 		            </div>
+		            <div class="col-xs-12">
+                            Sorry :-(<br/>
+                            We will soon bring something to roast
+                        </div>
 	                <div class="col-xs-12 trendBlock hand" ng-repeat="content in roastList.slice().reverse()">
 	                    <div class="row" ng-click="goToRoast(content)">
 	                        <div class="col-xs-4">
