--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -121,7 +121,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-xs-12 roastText">{{qna.comment}}</div>
+                                        <div class="col-xs-12 roastText" ng-bind-html="qna.htmlSafeComment"></div>
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                                     <div>
