--- a/client/views/aboutUs.html
+++ b/client/views/aboutUs.html
@@ -5,9 +5,9 @@
             	<div style="margin-top:30px">
             		<p><b>Dear Roasters</b></p>
  					<p>Democracy must be built through open societies that share information. When there is information, there is enlightenment. When there is debate, there are solutions. When there is constructive criticism, there is progress. When there is free speech, there is truth.<br/><br/>
- 					At India Roasts we bring you all the trending topics, news, information in the form of opinion poll and debate. We provide a platform where people can choose a side and debate by putting his/her opnions. Anybody can post a comment without even logging in, and those who are already registered they can also post any comment anonymously.<br/><br/>
+ 					At India Roasts we bring you all the trending topics, news, information in the form of opinion poll and debate. We provide a platform where people can choose a side and debate by putting their opnions. Anybody can post a comment without even logging in, and those who are already registered they can also post any comment anonymously.<br/><br/>
  					We have just taken the first step and still a long distance to cover, we need your support, vote, feedback, appreciation and constructive criticism to become better.<br/><br/>
- 					For any information, query, doubt or you just feel to abuse us personally, feel free to mail us: <b>roast@indiaroasts.com</b></p><br/>
+ 					For any information, query, doubt or if you just feel to abuse us personally, kindly mail us: <b>roast@indiaroasts.com</b></p><br/>
  					<p><b>Pankaj Bansal</b><br/></p>
  					<p>CEO & Founder<br/>
  					India Roasts</p>
