--- a/client/views/home.html
+++ b/client/views/home.html
@@ -66,12 +66,18 @@
 		</div>
 		<div class="row" ng-if="!isLoggedin">
 			<div class="row" style="background-color:#fff;min-height:300px;">
-		                <div class="col-xs-12" style="margin-top:60px">
-		                    <p align="center">Login</p>
-		               	</div>
-		               	<div class="col-xs-4 col-xs-offset-4">
-		               		<img src="/images/googleplusLg.png" class="hand" ng-click="GoToGoogleLogin()"/>
-		                    <img src="/images/facebookLg.png" class="hand" ng-click="GoToFacebookLogin()"/>
+		                <div class="col-xs-12" style="margin-top:45px">
+		                    <div class="col-xs-12" style="margin-bottom:10px">
+			                    <p class="mBottom20" align="center"><b>Login using</b></p>
+			                </div>
+			                <div class="col-xs-6 hand" style="display:table-cell;vertical-align:middle;text-align:center;border-right:1px solid;margin-top:15px" ng-click="GoToGoogleLogin()">
+			                    <img src="/images/googleplusLg.png"/>
+			                    <p>Google</p>
+			                </div>
+			                <div class="col-xs-6 hand" style="display:table-cell;vertical-align:middle;text-align:center;margin-top:15px" ng-click="GoToFacebookLogin()">
+			                    <img src="/images/facebookLg.png" />
+			                    <p>Facebook</p>
+			                </div>
 		               	</div>
 
 			      		<form name="googleLogin" action="/auth/google" method="get"></form>
