--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -45,7 +45,7 @@
                     <div class="col-xs-12">
                         <button type="button" ng-click="postRoast()" class="btn btn-place-primary" ng-disabled="btnDisable">Create Roast</button>
                     </div> -->
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-xs-12 trendingTitle" style="margin-top:4px;background-color:#2ECBDE;">
                             Ask a Question
                         </div>
@@ -72,15 +72,22 @@
                     </div>
                     <div class="col-xs-12" style="margin-bottom:60px;">
                         <button type="button" ng-click="postQuestion1()" class="btn btn-place-primary" ng-disabled="btnDisable1 || !isLoggedin">Ask Question</button>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-xs-12 trendingTitle" style="margin-top:4px;background-color:#2ECBDE;">
                             Create a Debate
                         </div>
                     </div>
-                    <div class="col-xs-12" style="margin-bottom:30px;">
+                    <div class="row" ng-if="!isLoggedin">
+                        <div class="col-xs-12" style="font-size:22px;background-color:#FF4545;margin-bottom:20px;margin-top:-15px;text-align:center;">
+                            Login before asking Question
+                        </div>
+                    </div>
+                    <div ng-if="isLoggedin" class="col-xs-12" style="margin-bottom:30px;">
                         <p><b>Write Your Debatable Question</b></p>
-                        <input type="text" class="form-control" ng-focus="removeErr()" my-maxlength="150" ng-trim="false" ng-model="debate.question2" placeholder="Write your Debatable question" />
+                        <input type="text" class="form-control" ng-focus="removeErr()" my-maxlength="150" ng-trim="true" ng-model="debate.question2" placeholder="Write your Debatable question" />
+                        <p style="margin-top:10px"><b>Enter background image Url</b></p>
+                        <input type="text" class="form-control" ng-model="debate.qImgUrl" my-maxlength="400" ng-trim="true" placeholder="Enter background image Url">
                         <p ng-if="showError2" class="blankErr">Kuch type kar le pahle</p>
                         <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{qChar2}} words left</p>
 
@@ -91,7 +98,7 @@
 
                         <button type="button" ng-hide="showDesc1" ng-click="showDesc1 = true" class="btn" style="font-size: 12px;margin-top:10px;background-color:#F1F1F1;color:gray;">Add Description</button>
                     </div>
-                    <div class="col-xs-12" style="margin-bottom:60px;" ng-hide="showtext">
+                    <div ng-if="isLoggedin" class="col-xs-12" style="margin-bottom:60px;" ng-hide="showtext">
                         <div class="col-xs-5 voteBtn hand" ng-click="editY()">
                             {{debate.yBtnValue}}
                             <p align="center" class="editVoteBtn">click to Customize</p>
@@ -121,7 +128,7 @@
                     <div ng-if="waiting">
                         <img src="../images/loader.gif" class="loader" />
                     </div>
-                    <div class="col-xs-12" style="margin-bottom:60px;margin-top:15px;" ng-hide="showtext">
+                    <div ng-if="isLoggedin" class="col-xs-12" style="margin-bottom:60px;margin-top:15px;" ng-hide="showtext">
                         <button type="button" ng-click="postQuestion2()" class="btn btn-place-primary" ng-disabled="btnDisable2 || !isLoggedin">Create Debate</button>
                     </div>
                </div>
