--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -23,6 +23,7 @@
                                 </div>
                                 <div class="row" ng-hide="editBoxQ" style="margin-bottom:10px;">
                                     <span class="pull-left hand" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="editQuestion(questions)">Edit Question</span>
+                                    <span class="pull-left hand" ng-if="maiBaap" style="font-size:13px;padding-top:10px;margin-right:15px;color:gray;" ng-click="delQuestion(questions)">Delete Question</span>
                                     <span class="pull-right">
                                         <img class="hand" social-facebook src="../images/facebook.png"/>
                                         <img class="hand" social-twitter src="../images/twitter.png"/>
