--- a/client/index.ejs
+++ b/client/index.ejs
@@ -5,9 +5,15 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+        <meta property="og:title" content="<%= title %>" />
+		<meta property="og:type" content="article" />
+		<meta property="og:image" content="" />
+		<meta property="og:url" content="" />
+		<meta property="og:description" content="" />
+
         <link rel="icon" type="image/ico" href="/images/logo.jpg"/>
 
-	    <script type="text/javascript" src="/client/appResources/library/angular/angular.min.js"></script>
+	    <script type="text/javascript" src="/appResources/library/angular/angular.min.js"></script>
 	    <script type="text/javascript" src="/appResources/library/angular/angular-route-min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/appResources/library/TwitterBootStrap/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/appResources/styles/style.css">
