--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -4,48 +4,6 @@
             <div class="row" style="background-color:#fff">
                 <div class="col-xs-12" style="min-height:556px">
                     <!-- <div class="row">
-                        <div class="col-xs-12 trendingTitle">
-                            Create Roast
-                        </div>
-                    </div>
-                    <div class="col-xs-12">
-                        <p><b>Name of the Roastee</b></p>
-                        <input type="text" my-maxlength="50" class="form-control" ng-trim="false" ng-model="roast.name" placeholder="Name of the person/thing you want to Roast" />
-                        <p class="pull-right mTop0" style="color:grey">{{nameChar}} words left</p>
-                    </div>
-                    <div ng-if="waiting">
-                        <img src="../images/loader.gif" class="loader" />
-                    </div>
-                    <div class="col-xs-12">
-                        <p style="margin-top:10px;"><b>Describe it</b></p>
-                        <textarea type="text" style="width:100%;height:80px;" ng-trim="false" my-maxlength="150" ng-model="roast.quote" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
-                        <p class="pull-right mTop0" style="color:grey">{{descChar}} words left</p>
-                    </div>
-                    <div class="col-xs-12">
-                        <h2>Single image with resizing</h2>
-                        <div>
-                            <label for="inputImage2">Image 2</label>
-                            
-                            <input id="inputImage2" 
-                                type="file" 
-                                accept="image/*" 
-                                image="image2" 
-                                resize-max-height="300"
-                                resize-max-width="250"
-                                resize-quality="0.7" />
-                            
-                            <p>Original</p>
-                            <img ng-show="image2" ng-src="{{image2.url}}" type="{{image2.file.type}}"/>
-                            <p>Resized</p>
-                            <img ng-show="image2" ng-src="{{image2.resized.dataURL}}"/>
-                            <button type="submit" ng-click="single(image2.resized)">Add</button>
-                        </div>
-                        <div class="addImage">Add Image</div>
-                    </div>
-                    <div class="col-xs-12">
-                        <button type="button" ng-click="postRoast()" class="btn btn-place-primary" ng-disabled="btnDisable">Create Roast</button>
-                    </div> -->
-                    <!-- <div class="row">
                         <div class="col-xs-12 trendingTitle" style="margin-top:4px;background-color:#2ECBDE;">
                             Ask a Question
                         </div>
@@ -73,14 +31,62 @@
                     <div class="col-xs-12" style="margin-bottom:60px;">
                         <button type="button" ng-click="postQuestion1()" class="btn btn-place-primary" ng-disabled="btnDisable1 || !isLoggedin">Ask Question</button>
                     </div> -->
-                    <div class="row">
-                        <div class="col-xs-12 trendingTitle" style="margin-top:4px;background-color:#2ECBDE;">
-                            Create a Debate
+    
+                    <div class="row" ng-if="!isLoggedin">
+                        <div class="col-xs-12" style="font-size:22px;background-color:#FF4545;margin-bottom:20px;margin-top:5px;text-align:center;">
+                            Login before asking Question
                         </div>
                     </div>
-                    <div class="row" ng-if="!isLoggedin">
-                        <div class="col-xs-12" style="font-size:22px;background-color:#FF4545;margin-bottom:20px;margin-top:-15px;text-align:center;">
-                            Login before asking Question
+                    <div ng-if="maiBaap">
+                        <div class="row">
+                            <div class="col-xs-12 trendingTitle">
+                                Create Roast
+                            </div>
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>Name of the Roastee</b></p>
+                            <input type="text" my-maxlength="50" class="form-control" ng-trim="true" ng-model="roast.name" placeholder="Name of the person/thing you want to Roast" />
+                            <p class="pull-right mTop0" style="color:grey">{{nameChar}} words left</p>
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>Title of the Roast</b></p>
+                            <input type="text" my-maxlength="150" class="form-control" ng-trim="true" ng-model="roast.title" placeholder="Headline of the Roast" />
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>Type of the Roast</b></p>
+                            <input type="text" my-maxlength="150" class="form-control" ng-trim="true" ng-model="roast.type" placeholder="type of the Roast" />
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>Roast Image Url</b></p>
+                            <input type="text" my-maxlength="400" class="form-control" ng-trim="true" ng-model="roast.imgUrl" placeholder="image url for the roast" />
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>Banner Image Url</b></p>
+                            <input type="text" my-maxlength="400" class="form-control" ng-trim="true" ng-model="roast.bannerUrl" placeholder="image url for the roast" />
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>writer name</b></p>
+                            <input type="text" my-maxlength="100" class="form-control" ng-trim="true" ng-model="roast.createdBy" placeholder="writer name" />
+                        </div>
+                        <div ng-if="waiting">
+                            <img src="../images/loader.gif" class="loader" />
+                        </div>
+                        <div class="col-xs-12">
+                            <p style="margin-top:10px;"><b>Describe it</b></p>
+                            <textarea type="text" style="width:100%;height:80px;" ng-trim="true" my-maxlength="150" ng-model="roast.quote" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
+                            <p class="pull-right mTop0" style="color:grey">{{descChar}} words left</p>
+                        </div>
+                        <div class="col-xs-12">
+                            <p><b>Write the content</b></p>
+                            <textarea type="text" style="width:100%;height:80px;" ng-trim="true" my-maxlength="5000" ng-model="roast.content" class="form-control" placeholder="Write your content here"></textarea>
+                        </div>
+                        <div class="col-xs-12">
+                            <button type="button" ng-click="postRoast()" class="btn btn-place-primary" ng-disabled="btnDisable">Create Roast</button>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 trendingTitle" style="margin-top:4px;background-color:#2ECBDE;">
+                                Create a Debate
+                            </div>
                         </div>
                     </div>
                     <div ng-if="isLoggedin" class="col-xs-12" style="margin-bottom:30px;">
