--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -18,7 +18,7 @@
 	                            </div>
 	                        </div>
                             <div class="col-xs-12 col-md-offset-1 col-lg-offset-1" style="margin-bottom:35px">
-                                <img src="http://qph.is.quoracdn.net/main-thumb-65424091-200-qfewjnaxxfuqpiqwdlmljcqfxobsefrf.jpeg" class="roastImage" />
+                                <img src="{{roastTitle.imgUrl}}" class="roastImage" />
                             </div>
                             <div class="col-xs-12" style="margin-top:-30px;">
                                 <p class="pull-right">
@@ -27,12 +27,78 @@
                                     <img class="hand" social-gplus src="../images/googleplus.png"/>
                                 </p>
                             </div>
-                            <div class="col-xs-12" style="margin-top:-20px;color:gray">
+                            <div class="col-xs-12" style="color:gray">
                                 <p class="pull-right">
                                     <b>{{roastTitle.views}}</b> Views
                                 </p>
+                                <p class="pull-left" ng-click="editRoastContent()">
+                                    edit Roast
+                                </p>
                             </div>
                             <div class="row" style="background-color:#fff;min-height:560px;">
+                                <div ng-repeat="data in roastData">
+                                    <div class="col-xs-12">
+                                        <p style="font-size:27px;font-weight:bold;">{{data.title}}</p>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p style="font-size:17px">{{data.content}}</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12">
+                                    <p class="pull-right">
+                                        <img class="hand" social-facebook src="../images/facebook.png"/>
+                                        <img class="hand" social-twitter src="../images/twitter.png"/>
+                                        <img class="hand" social-gplus src="../images/googleplus.png"/>
+                                    </p>
+                                </div>
+                                <div class="col-xs-12" style="color:gray">
+                                    <p class="pull-right">
+                                        <b>{{roastTitle.views}}</b> Views
+                                    </p>
+                                </div>
+                                <div ng-if="editRcontent">
+                                    <div class="col-xs-12">
+                                        <p><b>Name of the Roastee</b></p>
+                                        <input type="text" my-maxlength="50" class="form-control" ng-trim="true" ng-model="roastTitle.name" placeholder="Name of the person/thing you want to Roast" />
+                                        <p class="pull-right mTop0" style="color:grey">{{nameChar}} words left</p>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p><b>Title of the Roast</b></p>
+                                        <input type="text" my-maxlength="150" class="form-control" ng-trim="true" ng-model="roastTitle.title" placeholder="Headline of the Roast" />
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p><b>Type of the Roast</b></p>
+                                        <input type="text" my-maxlength="150" class="form-control" ng-trim="true" ng-model="roastTitle.type" placeholder="type of the Roast" />
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p><b>Roast Image Url</b></p>
+                                        <input type="text" my-maxlength="400" class="form-control" ng-trim="true" ng-model="roastTitle.imgUrl" placeholder="image url for the roast" />
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p><b>Banner Image Url</b></p>
+                                        <input type="text" my-maxlength="400" class="form-control" ng-trim="true" ng-model="roastTitle.bannerUrl" placeholder="image url for the roast" />
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p><b>writer name</b></p>
+                                        <input type="text" my-maxlength="100" class="form-control" ng-trim="true" ng-model="roastTitle.createdBy" placeholder="writer name" />
+                                    </div>
+                                    <div ng-if="waiting">
+                                        <img src="../images/loader.gif" class="loader" />
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p style="margin-top:10px;"><b>Describe it</b></p>
+                                        <textarea type="text" style="width:100%;height:80px;" ng-trim="true" my-maxlength="150" ng-model="roastTitle.quote" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
+                                        <p class="pull-right mTop0" style="color:grey">{{descChar}} words left</p>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <p><b>Write the content</b></p>
+                                        <textarea type="text" style="width:100%;height:80px;" ng-trim="true" my-maxlength="5000" ng-model="roastTitle.content" class="form-control" placeholder="Write your content here"></textarea>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <button type="button" ng-click="updateRoast()" class="btn btn-place-primary" ng-disabled="btnDisable">Create Roast</button>
+                                        <button type="button" ng-click="cancelRoastEdit()" class="btn btn-place-primary" ng-disabled="btnDisable">Cancel</button>
+                                    </div>
+                                </div>
                                 <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts | orderBy:'-createdOn'">
                                     <div class="row">
                                         <div class="col-xs-12" style="margin-bottom:10px">
@@ -43,7 +109,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-xs-12 roastText">{{roast.comment}}</div>
+                                        <div class="col-xs-12 roastText" ng-bind-html="roast.htmlSafeComment"></div>
                                         <div class="col-xs-12" style="font-size:12px;
         margin-top:20px;">
                                             <div>
